Slider spacing fixes

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -15,6 +15,7 @@
   border-radius: var(--card-corner-radius);
   border: var(--card-border-width) solid rgba(var(--color-foreground), var(--card-border-opacity));
   position: relative;
+  box-sizing: border-box;
 }
 
 .card--card:after,
