--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -112,10 +112,6 @@
   .multicolumn-list.slider .multicolumn-list__item {
     width: calc(100% - 3rem);
   }
-
-  .multicolumn-list.slider .multicolumn-list__item + .multicolumn-list__item {
-    padding-left: 0.5rem;
-  }
 }
 
 @media screen and (min-width: 750px) {
@@ -224,6 +220,7 @@
 
 .multicolumn-card {
   position: relative;
+  box-sizing: border-box;
   border-radius: var(--text-boxes-radius);
   border: var(--text-boxes-border-width) solid rgba(var(--color-foreground), var(--text-boxes-border-opacity));
 }
