--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -18,7 +18,6 @@
 @media screen and (max-width: 989px) {
   .collection .slider.slider--tablet {
     margin-bottom: 1.5rem;
-    padding-bottom: 0;
   } 
 }
 
